keep merged minigames compatible with Java 8